--- a/homepage.html
+++ b/homepage.html
@@ -1,32 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>berrybag</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/ad44c58da1.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="script.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
     <nav>
-        <div class="logo">
-            berrybag.
-        </div>
-        <div class ="categories-icon"><i class="fa-solid fa-bars"></i></div>
-        <form action="">
-            <input type="text" placeholder="Search..">
-        </form>
-        <div class="shopping-cart-icon"><a href="payment.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
-        <div class = "sign-in-link"><a href="signin.html">Sign in</a></div>
+      <div class="logo">berrybag.</div>
+      <div class="categories-icon"><i class="fa-solid fa-bars"></i></div>
+      <form action="">
+        <input type="text" placeholder="Search.." />
+      </form>
+      <div class="shopping-cart-icon">
+        <a href="payment.html"><i class="fa-solid fa-cart-shopping"></i></a>
+      </div>
+      <div class="auth-links">
+        <a href="signin.html">Sign in</a> /
+        <a href="register.html">Register</a>
+      </div>
     </nav>
-    <div class ="category-links">
-        <a>CAT1</a>
-        <a>CAT2</a>
-        <a>CAT3</a>
-        <a>CAT1</a>
-        <a>CAT2</a>
-        
+
+    <div class="category-links">
+      <a>CAT1</a>
+      <a>CAT2</a>
+      <a>CAT3</a>
+      <a>CAT1</a>
+      <a>CAT2</a>
     </div>
-    <hr></hr>
-</body>
+    <hr />
+
+    <h2 class="section-title">Featured Projects</h2>
+    <div class="slideshow-container" id="slideshow1">
+      <img
+        src="https://images.pexels.com/photos/57416/cat-sweet-kitty-animals-57416.jpeg?cs=srgb&dl=pexels-pixabay-57416.jpg&fm=jpg"
+        class="slide active"
+      />
+      <img
+        src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_16x9.jpg?w=1200"
+        class="slide"
+      />
+      <img
+        src="https://www.whiskas.co.uk/cdn-cgi/image/format=auto,q=90/sites/g/files/fnmzdf5651/files/2025-02/why-do-cats-purr_.jpg"
+        class="slide"
+      />
+
+      <a class="prev" onclick="changeSlide('slideshow1', -1)">❮</a>
+      <a class="next" onclick="changeSlide('slideshow1', 1)">❯</a>
+    </div>
+
+    <h2 class="section-title">Trending Now</h2>
+    <div class="slideshow-container" id="slideshow2">
+      <img
+        src="https://image.petmd.com/files/styles/978x550/public/2023-04/persian-cat-breed.jpg"
+        class="slide active"
+      />
+      <img
+        src="https://www.bluecross.org.uk/sites/default/files/d8/styles/theme_feature_extra_large/public/assets/images/139808.jpg.webp?itok=saAa0x3V"
+        class="slide"
+      />
+      <img
+        src="https://preview.redd.it/af446nff4fq51.jpg?width=640&crop=smart&auto=webp&s=4f109ac392afe60a99674e6ebd1ff75df4719b5b"
+        class="slide"
+      />
+
+      <a class="prev" onclick="changeSlide('slideshow1', -1)">❮</a>
+      <a class="next" onclick="changeSlide('slideshow1', 1)">❯</a>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
