--- a/register.html
+++ b/register.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sign In</title>
+    <title>Register</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="form-container">
-      <h2>Sign In</h2>
+      <h2>Create Account</h2>
       <form>
+        <input type="text" placeholder="Username" required /><br />
         <input type="email" placeholder="Email" required /><br />
         <input type="password" placeholder="Password" required /><br />
-        <button type="submit">Sign In</button>
+        <button type="submit">Register</button>
       </form>
-      <p>Don't have an account?</p>
-      <a href="register.html"><button class="alt-button">Register</button></a>
     </div>
   </body>
 </html>
