--- a/public/products.html
+++ b/public/products.html
@@ -1,105 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shopping Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-    .product-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .product-card {
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      overflow: hidden;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .product-card:hover {
-      transform: scale(1.03);
-    }
-    .product-card img {
-      width: 100%;
-      height: 200px;
-      object-fit:cover;
-    }
-    .product-info {
-      padding: 10px;
-    }
-    .price {
-      color: green;
-      font-weight: bold;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Shopping Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .product-card {
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            overflow: hidden;
+            text-align: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.2s;
+            cursor: pointer;
+        }
+        .product-card:hover {
+            transform: scale(1.03);
+        }
+        .product-card img {
+            width: 100%;
+            height: 200px;
+            object-fit:cover;
+        }
+        .product-info {
+            padding: 10px;
+        }
+        .price {
+            color: green;
+            font-weight: bold;
+        }
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+    </style>
 </head>
 <body>
-
-
-<h1 style="text-align: center;">Cats</h1>
-<div class="product-grid">
-  <div class="product-card">
-    <img src="https://i.pinimg.com/originals/6f/6b/0f/6f6b0f7bd389c4e0ffe299b2a1014535.jpg", alt="Cute Cat(Sunshine)">
-    <div class="product-info">
-      <h3>Sunshine</h3>
-      <p class="price">$</p>
+    <h1 style="text-align: center;">Cats</h1>
+    <div class="product-grid">
+        <a href="product.html?id=1">
+            <div class="product-card">
+                <img src="https://i.pinimg.com/originals/6f/6b/0f/6f6b0f7bd389c4e0ffe299b2a1014535.jpg" alt="Cute Cat(Sunshine)">
+                <div class="product-info">
+                    <h3>Sunshine</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=2">
+            <div class="product-card">
+                <img src="https://preview.redd.it/cat-selfie-v0-vik1m2dpa98a1.jpg?auto=webp&s=ec9ffbd2b8d9a92b3a6afd472ba1bae117e2e57d" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=3">
+            <div class="product-card">
+                <img src="https://placekitten.com/200/200" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=4">
+            <div class="product-card">
+                <img src="https://placekitten.com/200/200" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=5">
+            <div class="product-card">
+                <img src="https://placekitten.com/200/200" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=6">
+            <div class="product-card">
+                <img src="https://placekitten.com/200/200" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
+        <a href="product.html?id=7">
+            <div class="product-card">
+                <img src="https://placekitten.com/200/200" alt="Cute Kitten">
+                <div class="product-info">
+                    <h3>Cat Name</h3>
+                    <p class="price">$79.99</p>
+                </div>
+            </div>
+        </a>
     </div>
-  </div>
-  <div class="product-card">
-    <img src="https://preview.redd.it/cat-selfie-v0-vik1m2dpa98a1.jpg?auto=webp&s=ec9ffbd2b8d9a92b3a6afd472ba1bae117e2e57d" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-  <div class="product-card">
-    <img src="https://placekitten.com/200/200" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-  <div class="product-card">
-    <img src="https://placekitten.com/200/200" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-  <div class="product-card">
-    <img src="https://placekitten.com/200/200" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-  <div class="product-card">
-    <img src="https://placekitten.com/200/200" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-  <div class="product-card">
-    <img src="https://placekitten.com/200/200" alt="Cute Kitten">
-    <div class="product-info">
-      <h3>Cat Name</h3>
-      <p class="price">$</p>
-    </div>
-  </div>
-
-
-</div>
-
-
 </body>
 </html>
-
-
