Added aboutus.html, removed link underline under logo

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      <div class="logo">berrybag.</div>
+      <a href="aboutus.html"><div class="logo">berrybag.</div></a>
       <div class="categories-icon"><i class="fa-solid fa-bars"></i></div>
       <form action="">
         <input type="text" placeholder="Search.." />
